--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ footer p{
 }
 
 .delete-btn{
-    background-color: #dc2626;
+    background-color: #FF0000;
     border: none;
     cursor: pointer;
     padding: 6px 12px;
@@ -194,7 +194,7 @@ footer p{
 }
 
 .delete-btn:hover{
-    background: #b91c1c;
+    background: #e01919;
 }
 
 
